tests/ui/type/pattern_types/transmute.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute.rs:8:14
   |
LL |     unsafe { std::mem::transmute(x) }
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u32` (32 bits)
   = note: target type: `(u32) is S..=E` (size can vary because of u32)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute.rs:14:14
   |
LL |     unsafe { std::mem::transmute(x) }
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `(u32) is S..=E` (size can vary because of u32)
   = note: target type: `u32` (32 bits)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute.rs:22:14
   |
LL |     unsafe { std::mem::transmute(x) }
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `Option<(u32) is S..=E>` (size can vary because of u32)
   = note: target type: `u32` (32 bits)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/transmute.rs:30:14
   |
LL |     unsafe { std::mem::transmute(x) }
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `Option<(u32) is S..=E>` (size can vary because of u32)
   = note: target type: `Option<u32>` (64 bits)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0512`.
